// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RampsPaymentMethodScreen keeps cached methods visible when a refetch errors 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Select payment method
      </p>
    </div>
    <div
      class="flex-1 overflow-y-auto px-2 pb-4"
    >
      <div
        class="flex flex-col gap-1"
      >
        <button
          class="inline-flex items-center justify-center font-medium text-default bg-muted overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-lg px-4 py-3 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-item-debit-credit-card"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="bg-primary-muted flex h-11 w-11 shrink-0 items-center justify-center rounded-full"
              >
                <svg
                  class="inline-block w-5 h-5 text-primary-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 6v12q0 .824-.587 1.413c-.587.589-.863.587-1.413.587H4q-.824 0-1.412-.587C1.999 18.826 2 18.55 2 18V6q0-.824.588-1.412C3.175 4 3.45 4 4 4h16q.824 0 1.413.588C22.002 5.176 22 5.45 22 6M4 8h16V6H4zm0 4v6h16v-6z"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <p
                  class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                >
                  Debit card
                </p>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-debit-credit-card"
                >
                  5 - 10 mins
                </p>
              </div>
            </div>
            <div
              class="flex flex-row gap-2 items-center shrink-0"
            >
              <svg
                class="inline-block w-5 h-5 text-primary-default"
                data-testid="ramps-payment-method-item-selected"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9.55 17.886-5.7-5.7 1.425-1.425 4.275 4.275 9.175-9.176 1.425 1.425z"
                />
              </svg>
            </div>
          </div>
        </button>
        <button
          class="inline-flex items-center justify-center font-medium text-default bg-muted overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-lg px-4 py-3 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-item-bank-transfer"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="bg-muted flex h-11 w-11 shrink-0 items-center justify-center rounded-full"
              >
                <svg
                  class="inline-block w-5 h-5 text-icon-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 17.886v-7h2v7zm6 0v-7h2v7zm-9 4v-2h20v2zm15-4v-7h2v7zm-15-9v-2l10-5 10 5v2zm4.45-2h11.1L12 4.136z"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <p
                  class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                >
                  Bank transfer
                </p>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-bank-transfer"
                >
                  Instant
                </p>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Change provider.
      </p>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot when no payment methods are available 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-empty"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Select payment method
      </p>
    </div>
    <div
      class="flex flex-col gap-2 items-center justify-center flex-1 px-4 py-8"
    >
      <p
        class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
      >
        No payment methods are available.
      </p>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot when payment methods fail to load 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-error"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Select payment method
      </p>
    </div>
    <div
      class="flex flex-col gap-2 items-center justify-center flex-1 px-4 py-8"
    >
      <p
        class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
      >
        Error loading payment methods
      </p>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Change provider.
      </p>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot when payment methods query is idle 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-empty"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Select payment method
      </p>
    </div>
    <div
      class="flex flex-col gap-2 items-center justify-center flex-1 px-4 py-8"
    >
      <p
        class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
      >
        No payment methods are available.
      </p>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot while loading 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-loading"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Select payment method
      </p>
    </div>
    <div
      class="flex flex-col items-center justify-center flex-1"
    >
      <div
        class="spinner h-8 w-8"
      >
        <svg
          class="lds-spinner"
          height="100%"
          preserveAspectRatio="xMidYMid"
          style="background: none;"
          viewBox="0 0 100 100"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            transform="rotate(0 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.9166666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(30 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.8333333333333334s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(60 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.75s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(90 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.6666666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(120 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.5833333333333334s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(150 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.5s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(180 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.4166666666666667s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(210 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.3333333333333333s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(240 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.25s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(270 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.16666666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(300 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.08333333333333333s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(330 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="0s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot with payment methods 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Select payment method
      </p>
    </div>
    <div
      class="flex-1 overflow-y-auto px-2 pb-4"
    >
      <div
        class="flex flex-col gap-1"
      >
        <button
          class="inline-flex items-center justify-center font-medium text-default bg-muted overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-lg px-4 py-3 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-item-debit-credit-card"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="bg-primary-muted flex h-11 w-11 shrink-0 items-center justify-center rounded-full"
              >
                <svg
                  class="inline-block w-5 h-5 text-primary-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 6v12q0 .824-.587 1.413c-.587.589-.863.587-1.413.587H4q-.824 0-1.412-.587C1.999 18.826 2 18.55 2 18V6q0-.824.588-1.412C3.175 4 3.45 4 4 4h16q.824 0 1.413.588C22.002 5.176 22 5.45 22 6M4 8h16V6H4zm0 4v6h16v-6z"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <p
                  class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                >
                  Debit card
                </p>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-debit-credit-card"
                >
                  5 - 10 mins
                </p>
              </div>
            </div>
            <div
              class="flex flex-row gap-2 items-center shrink-0"
            >
              <svg
                class="inline-block w-5 h-5 text-primary-default"
                data-testid="ramps-payment-method-item-selected"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9.55 17.886-5.7-5.7 1.425-1.425 4.275 4.275 9.175-9.176 1.425 1.425z"
                />
              </svg>
            </div>
          </div>
        </button>
        <button
          class="inline-flex items-center justify-center font-medium text-default bg-muted overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-lg px-4 py-3 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-item-bank-transfer"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="bg-muted flex h-11 w-11 shrink-0 items-center justify-center rounded-full"
              >
                <svg
                  class="inline-block w-5 h-5 text-icon-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 17.886v-7h2v7zm6 0v-7h2v7zm-9 4v-2h20v2zm15-4v-7h2v7zm-15-9v-2l10-5 10 5v2zm4.45-2h11.1L12 4.136z"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <p
                  class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                >
                  Bank transfer
                </p>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-bank-transfer"
                >
                  Instant
                </p>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot with per-method quotes 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Select payment method
      </p>
    </div>
    <div
      class="flex-1 overflow-y-auto px-2 pb-4"
    >
      <div
        class="flex flex-col gap-1"
      >
        <button
          class="inline-flex items-center justify-center font-medium text-default bg-muted overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-lg px-4 py-3 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-item-debit-credit-card"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="bg-primary-muted flex h-11 w-11 shrink-0 items-center justify-center rounded-full"
              >
                <svg
                  class="inline-block w-5 h-5 text-primary-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 6v12q0 .824-.587 1.413c-.587.589-.863.587-1.413.587H4q-.824 0-1.412-.587C1.999 18.826 2 18.55 2 18V6q0-.824.588-1.412C3.175 4 3.45 4 4 4h16q.824 0 1.413.588C22.002 5.176 22 5.45 22 6M4 8h16V6H4zm0 4v6h16v-6z"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <p
                  class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                >
                  Debit card
                </p>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-debit-credit-card"
                >
                  5 - 10 mins
                </p>
              </div>
            </div>
            <div
              class="flex flex-row gap-2 items-center shrink-0"
            >
              <div
                class="flex flex-col items-end"
                data-testid="ramps-quote-display"
              >
                <p
                  class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                >
                  0.05 ETH
                </p>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
                >
                  $99.50
                </p>
              </div>
              <svg
                class="inline-block w-5 h-5 text-primary-default"
                data-testid="ramps-payment-method-item-selected"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9.55 17.886-5.7-5.7 1.425-1.425 4.275 4.275 9.175-9.176 1.425 1.425z"
                />
              </svg>
            </div>
          </div>
        </button>
        <button
          aria-disabled="true"
          class="inline-flex items-center justify-center font-medium text-default bg-muted overflow-hidden relative cursor-not-allowed opacity-50 w-full rounded-lg px-4 py-3 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-item-bank-transfer"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="bg-muted flex h-11 w-11 shrink-0 items-center justify-center rounded-full"
              >
                <svg
                  class="inline-block w-5 h-5 text-icon-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 17.886v-7h2v7zm6 0v-7h2v7zm-9 4v-2h20v2zm15-4v-7h2v7zm-15-9v-2l10-5 10 5v2zm4.45-2h11.1L12 4.136z"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <p
                  class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                >
                  Bank transfer
                </p>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-bank-transfer"
                >
                  Quote unavailable.
                </p>
              </div>
            </div>
            <div
              class="flex flex-row gap-2 items-center shrink-0"
            >
              <div
                class="flex flex-col items-end justify-center"
                data-testid="ramps-quote-display-warning"
              >
                <svg
                  class="inline-block w-4 h-4 text-warning-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 17q.424 0 .713-.287c.289-.288.287-.43.287-.713s-.096-.52-.287-.713S12.283 15 12 15s-.52.096-.712.287S11 15.717 11 16s.096.52.288.712.429.288.712.288m-1-4h2V7h-2zm1 9q-2.075 0-3.9-.787c-1.825-.788-2.275-1.238-3.175-2.138S3.313 17.117 2.788 15.9 2 13.383 2 12s.262-2.683.787-3.9 1.238-2.275 2.138-3.175S6.883 3.312 8.1 2.787 10.617 2 12 2s2.683.262 3.9.787 2.275 1.238 3.175 2.138 1.613 1.958 2.138 3.175S22 10.617 22 12s-.262 2.683-.787 3.9-1.238 2.275-2.138 3.175-1.958 1.613-3.175 2.138S13.383 22 12 22m0-2q3.35 0 5.675-2.325C20 15.35 20 14.233 20 12q0-3.35-2.325-5.675C15.35 4 14.233 4 12 4Q8.65 4 6.325 6.325C4 8.65 4 9.767 4 12q0 3.35 2.325 5.675C8.65 20 9.767 20 12 20"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;
